--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <p class="subtitle">客户凭订单领取激活码 • 管理员全面管理系统</p>
             
             <div class="admin-control">
-                <input type="password" id="adminPassword" placeholder="管理员密码" style="display:none">
+                <input type="password" id="adminPassword" placeholder="qq269948311" style="display:none">
                 <button id="adminBtn" class="btn-admin admin-btn">
                     <i class="fas fa-lock"></i> 管理员登录
                 </button>
